# Codenames

./: .gitmodules  CMakeLists.txt  README.md
include/: client.h  msg_builder.h  state.h  types.h
src/: msg_builder.cpp  provider.cpp  state.cpp  state_machine.cpp  types.cpp
test/: server_test.cpp
